--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,21 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-header{
+  background: #512DA8;
+  color: white;
+}
+
+.modal-body{
+  background: #D1C4E9;
+  color: black;
+}
+
+.close{
+  color: floralwhite;
+}
+
+.close:hover {
+  color: floralwhite;
+}
