--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,9 @@ body {
 .modal-header {
   background: #512DA8;
   color: floralwhite; }
+  .modal-header .close {
+    color: floralwhite; }
 
 .modal-body {
   background: #D1C4E9;
   color: black; }
-
-.close {
-  color: floralwhite; }
-
-.close:hover {
-  color: floralwhite; }
